--- a/website/src/main/resources/website/rsidebar.hbs
+++ b/website/src/main/resources/website/rsidebar.hbs
@@ -1,10 +1,11 @@
-<div class="side-bar">
-    <a href="#">
-        <img src="/assets/img/volunteer.png" alt="Volunteer your time &amp; skills" title="Volunteer" />
-    </a>
-</div>
-<div class="side-bar">
-    <a href="#">
-        <img src="/assets/img/submit-name.png" alt="Submit a name" title="Submit a name" />
-    </a>
-</div>
+<!--Commenting out for now
+<div class="side-bar">-->
+    <!--<a href="#">-->
+        <!--<img src="/assets/img/volunteer.png" alt="Volunteer your time &amp; skills" title="Volunteer" />-->
+    <!--</a>-->
+<!--</div>-->
+<!--<div class="side-bar">-->
+    <!--<a href="#">-->
+        <!--<img src="/assets/img/submit-name.png" alt="Submit a name" title="Submit a name" />-->
+    <!--</a>-->
+<!--</div>-->
