--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -35,7 +35,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <h2><a class="logo" href="http://www.yorubaname.com"><img src="/assets/img/yoruba-dictionary-logo-b.png"  alt="YorubaName.com" title="YorubaName.com" /></a></h2>
+                    <h2><a class="logo" href="/"><img src="/assets/img/yoruba-dictionary-logo-b.png"  alt="YorubaName.com" title="YorubaName.com" /></a></h2>
                 </div>                           
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">   
