--- a/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
@@ -31,4 +31,4 @@
         </div>
     </div>
 </form>
-<hr/> Uploaded spreadsheets should have their column in a particular order [Insert the order here]. We have provided a name entry template with the columns in the right other. Download the <a href="{{appEndpoint}}/name_entry_template.xlsx">name entry template here</a>
+<hr/> Uploaded spreadsheets should have their column in a particular order. We have provided a name entry template with the columns in the right other. Download the <a download="{{appEndpoint}}/name_entry_template.xlsx" href="{{appEndpoint}}/name_entry_template.xlsx">name entry template here</a>
