YOR-60 Exteded the front end to have a view through which names can be suggested

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -18,6 +18,8 @@
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
+{{> scriptIncludes }}
+
 <title>{{ title }}</title>
 
 
@@ -53,19 +55,6 @@
                         </li>
                         <li class="social-icon"><a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a></li>
                         <li class="social-icon"><a href="https://twitter.com/YorubaNames"><i class="fa fa-twitter"></i></a></li>
-
-                        
-                        <!--Disabling the drop down till we support another language
-                        <li class="dropdown">-->
-                            <!--<a href="#" class="dropdown-toggle lang" data-toggle="dropdown"><i class="fa fa-globe sec-color"></i> {{message "lang.language"}}<b class="caret"></b></a>-->
-                                <!--<ul class="dropdown-menu">-->
-                                    <!--<li><a href="#">Yorùbá</a></li>-->
-                                    <!--<li><a href="#">Igbo</a></li>-->
-                                    <!--<li><a href="#">Hausa</a></li>                                    -->
-                                    <!--<li><a href="#">English</a></li>-->
-                                    <!--<li><a href="#">Français</a></li>-->
-                                <!--</ul>-->
-                        <!--</li>-->
                     </ul>
                 </div>
             </div>                    
