--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -8,7 +8,7 @@
    		
         {{> searchcomponent }}
         
-        <h3>{{message "lang.jumboh31"}} <br /> <a href="#">{{message "lang.jumboh32"}}</a></h3>
+        <h3>{{message "lang.jumboh31"}} <br /> <a href="/submitname">{{message "lang.jumboh32"}}</a></h3>
    </div>
 </div>
 <!-- /search -->
