YOR-62 WIP for the dashboard to manage suggested names. Now has a view where suggested names can be listed

--- a/dashboard/src/main/resources/dashboard-client/app/views/list.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/list.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
-    <li><a ui-sref="home">Home</a></li>
     <li><a ui-sref="list.all">List</a></li>
+    <li><a ui-sref="list.suggestedNames">Suggested Names</a></li>
 </ol>
 <div ui-view></div>
 </div>
