--- a/website/src/main/resources/website/submitname.hbs
+++ b/website/src/main/resources/website/submitname.hbs
@@ -47,7 +47,7 @@
                     <input type="email" name="suggestedEmail" class="form-control" id="suggestedEmail" placeholder="Your email">
                 </div>
 
-                <button type="submit" id="submitName" class="btn btn-default btn-lg">Submit new name</button>
+                <button type="submit" id="submitName" class="btn btn-info btn-lg">Submit new name</button>
             </form>
         </div>
     </div>
