YOR-62 added ability to accept a suggested name from the dashboard

--- a/dashboard/src/main/resources/dashboard-client/app/styles/main.css
+++ b/dashboard/src/main/resources/dashboard-client/app/styles/main.css
@@ -112,8 +112,7 @@ body {
         line-height: 20px;
     }
     .container {
-        padding-right: 15px;
-        padding-left: 15px;
+        padding: 15px;
     }
     .container #sidebar {
         float: left;
